[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/FlapBat.png" type="Texture" id=1]
[ext_resource path="res://FlappyBat.gd" type="Script" id=2]
[ext_resource path="res://BatArea2D.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Fly",
"speed": 7.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 5.09902

[sub_resource type="CircleShape2D" id=6]

[node name="FlappyBat" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -4 )
frames = SubResource( 3 )
animation = "Fly"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -1, 1 )
enabled = true
cast_to = Vector2( 9, 0 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -2, -4 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 3 )
shape = SubResource( 6 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -2, -4 )
process_parent = true
physics_process_parent = true

[node name="FlipTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
